# PhoneToSTLPro

./: .gitignore  README.md  build-android.ps1  build-open3d-official-android.ps1
.github/workflows/: build-phonetsl-android.yml
docs/: BUILD.md  PLAN.md  ROADMAP.md  TECH.md  prompt inicial.txt
native/: CMakeLists.txt  build.ps1  build.sh
native/build-android/: CMakeCache.txt  cmake_install.cmake
native/build-test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PhoneToSTLProNative.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  phonetsl.vcxproj  phonetsl.vcxproj.filters
native/build-test/Release/: phonetsl.exp
native/build-test/phonetsl.dir/Release/: phonetsl.dll.recipe  phonetsl.lib.recipe
native/build-test/phonetsl.dir/Release/phonetsl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  phonetsl.write.1u.tlog
native/build-test/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
native/build-test/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
native/build-test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
native/include/: reconstruct.h
native/src/: reconstruct.cpp
unity/: Assembly-CSharp.csproj  README.md
unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+12 files in other folders)
